fix: increase gap

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ button:disabled {
 }
 .links {
   display: flex;
-  gap: 10px;
+  gap: 20px;
 }
 .columns {
   display: flex;
